1. 左上 logo 不建議用 a 包 h1 的方式，因為通常不會用行內元素包區塊元素，建議改為 h1 > a 的方式設計
2. 本日精選標籤建議改用 p 或 span 標籤

3. 當產品名稱文字變多時，價格會被擠壓導致跑版，例如這個版型，產品跟價格沒設定寬度，導致產品文字變多時，擠壓到右側價格

--- a/css/all.css
+++ b/css/all.css
@@ -146,6 +146,7 @@ img {
 .product-body h3 {
     padding: 14px 33px;
     border-right: 1px solid #EAF0ED;
+    width: 173px;
 }
 
 .product-body p {
@@ -178,7 +179,7 @@ img {
     position: relative;
 }
 
-.product-img h4 {
+.product-img p {
     position: absolute;
     top: 0;
     left: 20px;
